src/test/ui/suggestions/issue-64252-self-type.stderr
error: expected one of `!`, `(`, `...`, `..=`, `..`, `::`, `:`, `{`, or `|`, found `)`
  --> $DIR/issue-64252-self-type.rs:4:21
   |
LL | pub fn foo(Box<Self>) { }
   |                     ^ expected one of 9 possible tokens

error: expected one of `!`, `(`, `...`, `..=`, `..`, `::`, `:`, `{`, or `|`, found `)`
  --> $DIR/issue-64252-self-type.rs:10:21
   |
LL |     fn bar(Box<Self>) { }
   |                     ^ expected one of 9 possible tokens

error: aborting due to 2 previous errors

